# athena-python-client

./: .coverage  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  LICENSE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  ci.yml  docs.yml  package.yml  test_report.yml
common_utils/: __init__.py  image_generation.py
docs/: Makefile  __init__.py  authentication.rst  conf.py  contributing.rst  development.rst  examples.rst  index.rst  installation.rst
docs/_build/doctrees/: contributing.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree
docs/_build/doctrees/api/: client.doctree  correlation.doctree  deployment_selector.doctree  exceptions.doctree  grpc_wrappers.doctree  index.doctree  options.doctree  transformers.doctree
docs/_build/html/: .buildinfo  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_static/css/: custom.css
docs/_templates/autosummary/: class.rst  module.rst
docs/api/: client.rst  correlation.rst  deployment_selector.rst  exceptions.rst  grpc_wrappers.rst  index.rst  options.rst  transformers.rst
examples/: __init__.py  classify_single_example.py  create_image.py  example.py  functional_test.py  oauth_example.py
examples/utils/: __init__.py  image_generation.py  streaming_classify_utils.py
proto/athena/: athena.proto
scripts/: compile_proto.sh
src/: __init__.py  image_generation.py
src/athena_client/: version.py
src/athena_client/client/: __init__.py  athena_client.py  athena_options.py  channel.py  consts.py  deployment_selector.py  exceptions.py  utils.py
src/athena_client/grpc_wrappers/: classifier_service.py
src/resolver_athena_client/: image_generation.py
src/resolver_athena_client/client/: __init__.py  athena_client.py  athena_options.py  channel.py  correlation.py  deployment_selector.py  image_format_detector.py
src/resolver_athena_client/grpc_wrappers/: classifier_service.py
stubs/: brotli.pyi
stubs/grpc/aio/: _call.pyi
tests/: test_classify_single.py  test_correlation.py  test_version.py
tests/client/: __init__.py  test_athena_client.py  test_channel.py  test_deployment_selector.py  test_image_format_detector.py  test_output_error_handling.py  test_timeout_behavior.py
tests/client/models/: test_image_data.py
tests/client/transformers/: test_async_transformer.py  test_brotli_compressor.py  test_classification_input.py  test_core.py  test_hash_pipeline.py  test_image_resizer.py  test_jpeg_converter.py  test_request_batcher.py  test_worker_batcher_simple.py
tests/functional/: conftest.py  test_classify_single.py  test_classify_streaming.py  test_color_channels.py  test_invalid_affiliate.py  test_invalid_image.py  test_invalid_oauth.py  test_invalid_static_token_auth.py  test_list_deployments.py  test_multi_format.py
tests/functional/e2e/: test_classify_single.py
tests/grpc_wrappers/: classifier_service_test.py
tests/transformers/: __init__.py  test_async_transformer.py  test_brotli_compressor.py  test_classification_input.py  test_image_resizer.py  test_request_batcher.py
tests/utils/: image_generation.py  mock_async_iterator.py  mock_stream_call.py  streaming_classify_utils.py
(+46 files in other folders)
