[project]
name = "athena_client"
version = "0.1.0"
description = "Athena Client Library"
readme = "README.md"
authors = [{ name = "Resolver Global", email = "opensource@kroll.com" }]
requires-python = ">=3.10"
dependencies = [
    "grpcio-tools>=1.74.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "types-protobuf>=6.30.2.20250703",
]

[dependency-groups]
dev = [
    "mypy-protobuf>=3.6.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 80
exclude = ["src/athena_client/generated/*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D213", "D211", "D203"]

[tool.pyright]
exclude = ["src/athena_client/generated/*", ".venv"]
